--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     </div>
     <div id="resultDiv">
         <table id="result">
+            <thead id="tablehead">
+            </thead>
             <tbody id="tableBody">
-
             </tbody>
         </table>
     </div>
